--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@CrescentSchool" />
     <meta name="twitter:image" content="/favicon.jpg" />
+
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+    <script>
+      window.OneSignalDeferred = window.OneSignalDeferred || [];
+      window.OneSignalDeferred.push(async function (OneSignal) {
+        await OneSignal.init({
+          appId: "e1b739f9-9ff3-4d1c-aeaa-72087c01cb6a",
+        });
+      });
+    </script>
   </head>
 
   <body>
